# libgepub

./: .gitignore  .gitlab-ci.yml  MAINTAINERS  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  configure_meson  libgepub.doap  libgepub.pc.in  meson.build  meson_options.txt
libgepub/: Makefile.am  gepub-archive.c  gepub-archive.h  gepub-doc.c  gepub-doc.h  gepub-double-widget.c  gepub-double-widget.h  gepub-text-chunk.c  gepub-text-chunk.h  gepub-utils.c  gepub-utils.h  gepub-widget.c  gepub-widget.h  gepub.c  gepub.h  gepub.map  meson.build
libgepub/rust/: Cargo.toml
libgepub/rust/src/: lib.rs
tests/: Makefile.am  double-page-epub.py  meson.build  test-gepub.c
